--- a/OpenTweet/Base.lproj/Main.storyboard
+++ b/OpenTweet/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,6 +25,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+        </scene>
+        <!--Thread View Controller-->
+        <scene sceneID="PKJ-R4-Lvg">
+            <objects>
+                <viewController storyboardIdentifier="ThreadViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="S95-0p-KKB" customClass="ThreadViewController" customModule="OpenTweet" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Nfr-iu-euq"/>
+                        <viewControllerLayoutGuide type="bottom" id="Y62-Xa-D4G"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Jqy-6Y-Z2s">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="DQe-q9-qc9">
+                                <rect key="frame" x="16" y="60" width="382" height="776"/>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="DQe-q9-qc9" secondAttribute="bottom" constant="16" id="6M2-SU-k0d"/>
+                            <constraint firstItem="DQe-q9-qc9" firstAttribute="leading" secondItem="Jqy-6Y-Z2s" secondAttribute="leading" constant="16" id="LCU-Dp-ala"/>
+                            <constraint firstAttribute="bottom" secondItem="DQe-q9-qc9" secondAttribute="bottom" priority="250" constant="60" id="Lgt-CQ-MAJ"/>
+                            <constraint firstItem="DQe-q9-qc9" firstAttribute="top" secondItem="Nfr-iu-euq" secondAttribute="bottom" constant="16" id="R3U-gW-vkl"/>
+                            <constraint firstAttribute="trailing" secondItem="DQe-q9-qc9" secondAttribute="trailing" constant="16" id="eBF-7B-Au8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="stackView" destination="DQe-q9-qc9" id="DfT-4f-Z6i"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fe4-4d-jzI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1876.8115942028987" y="146.65178571428569"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Uan-xw-2eD">
@@ -47,4 +81,9 @@
             <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
